--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +15,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <intent-filter>
             <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
         </intent-filter>
@@ -27,23 +25,26 @@
 
         <activity
             android:name=".LoginActivity"
-            android:windowSoftInputMode="adjustResize|stateAlwaysHidden"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustResize|stateAlwaysHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activity.TripConfirmationActivity"
+            android:configChanges="orientation"
             android:windowSoftInputMode="stateAlwaysHidden" />
-
         <activity
             android:name=".activity.TripProgressActivity"
             android:windowSoftInputMode="stateAlwaysHidden" />
 
+        <receiver
+            android:name=".model.messagequeue.StepGlobalMessageQueueHandler"
+            android:enabled="true"
+            android:exported="true"></receiver>
     </application>
 
 </manifest>
